# intel_mlops

./: .gitignore  .gitmodules  mlops.code-workspace  ruff.toml
MLOps_Professional/mlops_capstone/robot_maintenance/src/: requirements.txt
labtools/: pyproject.toml
mlops/lab1/sample/: requirements.txt
mlops/lab2/: fancy_orchards_predictive_maintenance.drawio
mlops/lab4/: pyproject.toml
mlops/lab4/sample/: __init__.py
mlops/lab5/: pyproject.toml
mlops/lab5/mlo_lab5/: main.py
mlops/lab6/lab6/: Falcon_HF_Pipelines.py  Gemma_HF_Pipelines.py
mlops/lab7/: pyproject.toml  requirements.txt
mlops/lab7/lab7/: serve.py
mlops/lab8/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mlops/lab8/app/: __init__.py  __main__.py  main.py
mlops/lab8/app/models/pickerbot/: data.txt
mlops/lab8/model/: data_model.py  picker_bot.py
mlops/lab8/sample/: Dockerfile  PickerBot.py  __main__.py  model.py  requirements.txt  run.py  serve.py
mlops/lab8/tests/: test_bot.py  test_init_conditions.py
mlops/lab9/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mlops/lab9/cpu/: check_avx2.cpp
mlops/lab9/sample/: Part I - Leveraging Intel Optimizations with Hugging Face for Enhanced Model Performance.ipynb
mlops/mlops_capstone/: component_diagram.drawio  docker-compose.yml  pyproject.toml
mlops/mlops_capstone/app/: pyproject.toml
mlops/mlops_capstone/app/app/: __main__.py  inference.py  main.py  train.py  utils.py
mlops/mlops_capstone/app_frontend/: Home.py
mlops/mlops_capstone/app_frontend/pages/: Monitoring.py
mlops/mlops_capstone/frontend/: Dockerfile  Home.py  pyproject.toml
mlops/mlops_capstone/frontend/frontend/: Home.py
mlops/mlops_capstone/frontend/pages/: Monitoring.py  RoboMaintenance.py
mlops/mlops_capstone/robot_maintenance/src/: inference.py  requirements.txt  serve.py
mlops/mlops_capstone/robot_maintenance/src/utils/: generate_data.py
mlops/workshops/01_model_development_basics/: model_development_basics.ipynb
mlops/workshops/02_llm_pipelines/: llm_pipelines.ipynb
