[tool.poetry]
name = "mlo-lab5"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
torch = {version = "*", source = "pytorch"}
torchvision = {version = "*", source = "pytorch"}
intel-extension-for-pytorch = {version = "*", source = "ipex"}
oneccl_bind_pt = {version = "*", source = "ipex"}
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "ipex"
url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
priority = "explicit"
