[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain="*"
transformers="*"
datasets="*"
tiktoken="*"
chromadb="*"
sentence_transformers="*"
requests = "^2.31"
accelerate = "^0.29"
torch = { version = "*", source = "torch" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"