[tool.poetry]
name = "sample"
version = "0.2.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
transformers="*"
datasets="*"
accelerate="*"
torch = {version = "^2.2.0, <2.3.0", source = "torch"}
intel-extension-for-pytorch = {version = "*", source = "ipex"}
scikit-learn = "*"
ipykernel = "*"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "ipex"
url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
