[tool.poetry]
name = "sample"
version = "0.2.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
transformers="*"
datasets="*"
accelerate="*"

intel-extension-for-pytorch = {git = "https://github.com/witzbeck/intel-extension-for-pytorch.git", branch = "feature/enhanced-avx2-checks"}
torch = {version = "^2*+cpu", source = "torch"}
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
